--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -49,7 +49,8 @@
 
 @media only screen and (max-width: $logo-breakpoint) {
 	.whole-wrapper {
-		// grid-template-columns: 100%;  // ztodo what the fuck did i mean by this?
+		// i think this makes sure things don't align side by side
+		grid-template-columns: 100%;
 		grid-template-areas:
 			"header"
 			"content"
@@ -66,9 +67,6 @@
 	}
 	#footer {
 		//positioned absolutely
-	}
-	.webrings, #wr-divider {
-		display: none;
 	}
 
 	.content {
@@ -306,7 +304,6 @@ hr {
 hr::before, h1::after, h2::after {
 	/* is in the ::before of the hr so i can put a line break in the ::after */
 	color: $text-09;
-	// width: 100%;
 	display: block;
 	content: $hr-content;
 	white-space: nowrap;
